--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-16 13:37:41
+lastsearch = 2024-07-16 14:18:34
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -307.7%%
-title = #stitch with @Steven Chan Hoi Sing I broke my leg running to ...
-url = https://www.tiktok.com/@mamakkofficial/video/7371338212553280811
+match = -315.4%%
+title = #stitch mit @Steven Chan Hoi Sing Keine Frauen für uns mehr ...
+url = https://www.tiktok.com/@artis_just_for_7/video/7377443374200098081
 
 [admissions.hku.hk]
 match = -38.5%%
