--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-clfi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-clfi.html
 lastopen = 2024-06-06 17:09:48
 
 [search]
-lastsearch = 2024-07-16 03:16:47
+lastsearch = 2024-07-16 14:17:33
 
 [www.everonvn.vn]
 match = 29.6%%
@@ -37,9 +37,9 @@ title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/Tx16RF6LC863W2F/?source=allQuestionsPage
 
 [forum.mattressunderground.com]
-match = -31.7%%
-title = Closest better alternative that compares to these big brand ...
-url = https://forum.mattressunderground.com/t/closest-better-alternative-that-compares-to-these-big-brand-specs/13794
+match = 14.6%%
+title = Differentiating between King Koil mattresses
+url = https://forum.mattressunderground.com/t/mattress-search-differentiating-between-king-koil-mattresses/12812
 
 [www.lencoheaven.net]
 match = -4.9%%
@@ -47,9 +47,9 @@ title = Just a picture (page 126) - Cartridges and Styli
 url = https://www.lencoheaven.net/forum/index.php?topic=8090.1875
 
 [audiokarma.org]
-match = 2.4%%
-title = The P-Mount owners club | Page 33 - AudioKarma
-url = https://audiokarma.org/forums/index.php?threads/the-p-mount-owners-club.793028/page-33
+match = 0.0%%
+title = Audio Grade capacitors catharsis - AudioKarma
+url = https://audiokarma.org/forums/index.php?threads/audio-grade-capacitors-catharsis.907641/
 
 [db.audioasylum.com]
 match = -75.0%%
