--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-16 13:47:58
+lastsearch = 2024-07-16 14:13:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trướ
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
-match = -193.3%%
-title = Điện thoại sức mạnh khủng khiếp nhất thế giới - ROG ...
-url = https://www.tiktok.com/@tuanngocday/video/7122416350638705946
+match = -153.3%%
+title = Đo lại chiều cao cho Lê Vi đã lên 1m68 rồi ạ 🥰 ...
+url = https://www.tiktok.com/@bybacademyvn/video/7309079277306187015
 
 [www.reddit.com]
 match = -120.0%%
