--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-16 12:13:50
+lastsearch = 2024-07-16 14:12:49
 
 [xoptraisan.info]
 match = 5.3%%
@@ -22,9 +22,9 @@ title = Thảm xốp hoạt hình 60 x 60 cm
 url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [thamht.vn]
-match = 52.6%%
-title = Thảm xốp hoạt hình 60x60
-url = https://thamht.vn/products/tham-xop-hoat-hinh-cho-tre-em
+match = 42.1%%
+title = Thảm xốp hình sóng 60x60
+url = https://thamht.vn/products/tham-lot-khu-vui-choi-tre-em-xop-hinh-song
 
 [shopee.vn]
 match = -94.7%%
@@ -37,9 +37,9 @@ title = Thảm xốp 60x60cm
 url = https://thamtretho.com/tham-xop-60x60cm
 
 [vatlieulotsan.com]
-match = -52.6%%
-title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
-url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
+match = -73.7%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
 match = -94.7%%
