--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-07-16 18:31:48
+lastsearch = 2024-07-16 18:49:06
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -122,9 +122,9 @@ title = DCINE Quy Nhơn
 url = https://www.dcine.vn/rap/dcine-quy-nhon-5.html
 
 [m.facebook.com]
-match = -118.8%%
-title = TOUR GIỜ CHÓT | 📢𝗧𝗼𝘂𝗿 𝗧𝗵𝗮̀𝗻𝗵 Đ𝗼̂ - 𝗖𝘂̛̉𝘂 𝗧𝗿𝗮̣𝗶 𝗖𝗮̂𝘂
-url = https://m.facebook.com/groups/2606284112964666/posts/3694418780817855/
+match = -125.0%%
+title = SĂN TOUR - COMBO DU LỊCH GIÁ RẺ SALE GIỜ CHÓT
+url = https://m.facebook.com/groups/374424207463060/posts/849517706620372/
 
 [kinhte.congthuong.vn]
 match = -218.8%%
@@ -365,4 +365,19 @@ url = https://www.photo.net/discuss/threads/cz-tessar-50mm-in-leica-m-or-ltm.154
 match = -187.5%%
 title = Tiêu chuẩn mua túi chống sốc gồm những gì? Cùng tìm hiểu
 url = https://tlctrading.vn/tieu-chuan-mua-tui-chong-soc
+
+[www.fact-link.com.vn]
+match = -168.8%%
+title = FACT-LINK : : Japan - Vietnam Industrial Directory
+url = https://www.fact-link.com.vn/contact_supplier.php?pid=21
+
+[pulaubidong.wordpress.com]
+match = -200.0%%
+title = The Vietnamese Boat People – Pulau Bidong during 1978-1979
+url = https://pulaubidong.wordpress.com/2008/11/10/my-family-lived-on-pulau-bidong-during-1978-1979/
+
+[www.lexisnexis.com]
+match = -156.2%%
+title = Records of the Military Assistance Command Vietnam
+url = http://www.lexisnexis.com/documents/academic/upa_cis/3208_recsmacvpt1.pdf
 
