--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-16 15:50:29
+lastsearch = 2024-07-16 18:51:46
 
 [www.diepxuan.com]
-match = -10.7%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
+match = 0.0%%
+title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
