--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-07-16 15:19:12
+lastsearch = 2024-07-16 18:51:26
 
 [ninhouse.vn]
 match = -161.5%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -253.8%%
-title = JIANZ Vải dệt hoa Vỏ gối kê bằng vải nhung lông Mềm Ấm ...
-url = https://www.lazada.vn/products/jianz-vai-det-hoa-vo-goi-ke-bang-vai-nhung-long-mem-am-ap-vo-goi-goi-ke-mau-tron-nha-i2673554787-s13091188722.html?from_gmc=1&fl_tag=1
+match = -284.6%%
+title = Gối nằm, gối ngủ, gối kẻ, gối hơi gồm cả ruột gối và vỏ áo ...
+url = https://www.lazada.vn/products/goi-nam-goi-ngu-goi-ke-goi-hoi-gom-ca-ruot-goi-va-vo-ao-goi-loai-to-danh-cho-nguoi-lon-50-x70cm-cac-mau-ke-vai-cotton-han-quoc-i1568863340.html
 
 [flexhouse.vn]
 match = -207.7%%
