--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-16 19:24:35
+lastsearch = 2024-07-16 20:24:11
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -165,4 +165,9 @@ url = https://academic.oup.com/book/24392/chapter/187344854
 match = 0.0%%
 title = 
 url = https://www.rebalancetcm.com/3-acupressure-points-to-aid-digestion/
+
+[www.acufinder.com]
+match = -200.0%%
+title = Ren 12 (CO 12) - Acupuncture Points
+url = https://www.acufinder.com/Acupuncture+Points/Ren+12+(CO+12)/333
 
