--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-16 23:22:03
+lastsearch = 2024-07-16 23:39:27
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -200,4 +200,9 @@ url = https://www.instagram.com/ruiqidai/p/B1iyIMOAhfx/
 match = -35.7%%
 title = UY BAN NHAN DAN CQNG HOA XA HQI CHU NGHlA 'VIET ...
 url = https://www.cantho.gov.vn/wps/VBCDDH2/view/downloadFile.do?fileName=kh_67_1.signed.pdf
+
+[nhua66a.com]
+match = -17.9%%
+title = BÌNH ĐÁ 14 LÍT - DUY TÂN - GIAO HÀNG TẬN NƠI
+url = https://nhua66a.com/product/binh-da-14-lit-duy-tan/
 
