--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-16 21:35:02
+lastsearch = 2024-07-16 23:36:52
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -17,14 +17,14 @@ title = Fabiana Justus (@fabianajustus)
 url = https://www.instagram.com/fabianajustus/?hl=en
 
 [www.reddit.com]
-match = -115.0%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
-url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
+match = -135.0%%
+title = Riot is cutting back budget on esports? : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/9aqbes/riot_is_cutting_back_budget_on_esports/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -100.0%%
-title = acho que esse meu primo é gay 🤨🏳️‍🌈 #minerva #cblol ...
-url = https://www.tiktok.com/@gustavominerva/video/7390402879112187178
+match = -160.0%%
+title = I went through a series of emotions but 10/10 wow 🤤 @Fruit ...
+url = https://www.tiktok.com/@tatlafata/video/7356429796424895790
 
 [www.imdb.com]
 match = 0.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -115.0%%
-title = PM calls off press meeting amid clash over THAAD ...
-url = https://en.yna.co.kr/view/AEN20170907001800315
+match = -110.0%%
+title = 122 ships affected by suspected N. Korean GPS jamming
+url = https://en.yna.co.kr/view/AEN20120504005000315
 
 [www.vlr.gg]
 match = 5.6%%
