--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-16 23:22:27
+lastsearch = 2024-07-16 23:41:49
 
 [www.diepxuan.com]
-match = 27.3%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
+match = 13.6%%
+title = Thảm giường Bode 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [tiki.vn]
 match = -36.4%%
@@ -17,18 +17,18 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -27.3%%
-title = Thảm Lông Trải Giường Giá Rẻ Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-long-trai-giuong-gia-re/
+match = -86.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -50.0%%
-title = Thảm tròn trải chân giường trong phòng ngủ ...
+match = -104.5%%
+title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
-match = -45.5%%
-title = (FREESHIP) Thảm chân giường, thảm bếp dài ...
+match = -63.6%%
+title = (FREESHIP) Thảm chân giường, thảm bếp dài 1m6-50 ...
 url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-dep-hang-co-san/
 
 [decoviet.vn]
