--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-16 21:37:32
+lastsearch = 2024-07-16 23:47:55
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -150.0%%
-title = Ước thiệt hại 1,6 tỷ đồng do ảnh hưởng của mưa lớn
-url = https://baomoi.com/huyen-lac-son-uoc-thiet-hai-1-6-ty-dong-do-anh-huong-cua-mua-lon-c49648650.epi
+match = -168.8%%
+title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
+url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
 
 [www.thegioididong.com]
 match = -231.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 [books.google.com]
 match = -250.0%%
 title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
-url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSVCiY0cc&sig=ACfU3U27WA0uOp61i9G_EOC1B0Of6KBnaA&hl=en&sa=X&ved=2ahUKEwj-m9DJ5KuHAxVrFlkFHYhgCioQ6AF6BAggEAM
+url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSVCi4_ef&sig=ACfU3U0iM64aeCU35mcG-TfQSrE6BImoUg&hl=en&sa=X&ved=2ahUKEwipnvXbgayHAxV1D1kFHWczDiwQ6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -470,4 +470,9 @@ url = https://www.baosoctrang.org.vn/chinh-tri/ven-nguyen-ky-uc-cua-nhung-thanh-
 match = -218.8%%
 title = [VIDEO] VN-Index 16/07/2024: Dòng tiền lớn đang đi vào ...
 url = https://24hmoney.vn/news/video-vn-index-16-07-2024-dong-tien-lon-dang-di-vao-co-phieu-thanh-khoan-cang-thap-ki-luc-cang-de-len-c30a2331789.html
+
+[suckhoedoisong.vn]
+match = -200.0%%
+title = Con số may mắn hôm nay 16/7/2024 - số tài lộc theo 12 ...
+url = https://suckhoedoisong.vn/con-so-may-man-hom-nay-16-7-2024-so-tai-loc-theo-12-con-giap-169240715155246629.htm
 
