--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-16 23:47:55
+lastsearch = 2024-07-17 00:18:12
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = TIN TÔN GIÁO, CHIỀU THỨ HAI 15/07/2024
 url = https://www.youtube.com/watch?v=CW1lWW6yhOQ
 
 [books.google.com]
-match = -250.0%%
-title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
-url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSVCi4_ef&sig=ACfU3U0iM64aeCU35mcG-TfQSrE6BImoUg&hl=en&sa=X&ved=2ahUKEwipnvXbgayHAxV1D1kFHWczDiwQ6AF6BAgeEAM
+match = -150.0%%
+title = American Soap Journal and Manufacturing Chemist
+url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9EdC5vC0&sig=ACfU3U1-fEmZZvYwUpO1HwXxDROhUCs7Ww&hl=en&sa=X&ved=2ahUKEwiQmLG-iKyHAxUKF1kFHfaBAyoQ6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
