--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-16 19:58:30
+lastsearch = 2024-07-17 00:12:29
 
 [changagoidemtamhao.com]
 match = -5.0%%
@@ -75,4 +75,9 @@ url = https://thuongtruong.com.vn/news/coi-thuong-co-quan-chuc-nang-vua-nem-nhie
 match = -75.0%%
 title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
 url = https://remdemgiaphat.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16/
+
+[thegioidemonline.com]
+match = -70.0%%
+title = Chăn ga gối Singapore Pyeoda Luxury 5 món PL5M 16
+url = https://thegioidemonline.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon-pl5m-16.html
 
