--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-16 22:44:25
+lastsearch = 2024-07-17 00:15:04
 
 [www.lazada.vn]
 match = -88.9%%
@@ -22,9 +22,9 @@ title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng
 url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = -55.6%%
-title = Bảng giá nệm cao su Kim Cương mới 2024
-url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
 match = -88.9%%
