--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-17 01:21:00
+lastsearch = 2024-07-17 01:35:23
 
 [demxanh.com]
 match = 13.8%%
@@ -47,9 +47,9 @@ title = Điệp Xuân Bộ chăn ga gấm Pyeoda SkySilk
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 
 [www.facebook.com]
-match = -27.8%%
-title = Đệm Xanh Bắc Giang
-url = https://www.facebook.com/demxanh.308bacgiang/?locale=nl_BE
+match = 28.0%%
+title = Chăn Ga Gối Đệm Singapore
+url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
 
 [changagoidemdep.vn]
 match = 3.4%%
