--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-17 00:16:12
+lastsearch = 2024-07-17 01:35:56
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -156.2%%
-title = Gloss for life - #beautytok - #hudabeauty - #lip
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -81.2%%
+title = #beautytok #blush #newproduct @Huda
+url = https://www.tiktok.com/@hudabeauty/video/7376703844530588970
 
 [archiveofourown.org]
 match = -137.5%%
