--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-17 00:44:58
+lastsearch = 2024-07-17 01:34:17
 
 [gobearcats.com]
 match = -142.1%%
@@ -182,9 +182,9 @@ title = 2024 Fall Quarter/ Fall Semester Academic Calendar (All ...
 url = https://search.uconline.edu/docs/academic-calendar.pdf
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.4%%
+title = Lien Claimants
+url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -178.9%%
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -84.2%%
-title = Vancomycin Resistance in Enterococcus and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
+match = -163.2%%
+title = A Comprehensive Review of Health Benefits of Qigong and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3085832/
 
 [www.ucdavis.edu]
 match = -52.6%%
@@ -485,4 +485,9 @@ url = https://www.judcom.nsw.gov.au/publications/benchbks/sentencing/table_of_ca
 match = 0.0%%
 title = 
 url = https://ktla.com/news/california/4-southern-california-high-schoolers-named-2024-presidential-scholars/
+
+[sos.ga.gov]
+match = -78.9%%
+title = GEORGIA STATE BOARD of COSMETOLOGY AND ...
+url = https://sos.ga.gov/sites/default/files/2022-06/january_2022_minutes.pdf
 
