--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-16 22:52:14
+lastsearch = 2024-07-17 01:34:28
 
 [www.lazada.vn]
-match = -26.7%%
-title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-om-vuong/
+match = -166.7%%
+title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
+url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
 
 [shopee.vn]
-match = -153.3%%
-title = Vỏ Gối Vuông Họa Tiết Hoa Thời Trang Có Thể Tháo Rời
-url = https://shopee.vn/Vỏ-Gối-Vuông-Họa-Tiết-Hoa-Thời-Trang-Có-Thể-Tháo-Rời-i.537894809.24358532242
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
@@ -27,9 +27,9 @@ title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
 url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
-match = -126.7%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -106.7%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
 match = -6.7%%
